Adding statusText to the video message playback display

--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -6,6 +6,11 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="TransatTextStandard.otf">
+            <string>TransatTextStandard</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Root View Controller-->
         <scene sceneID="B4N-U0-5zU">
@@ -337,6 +342,18 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                 </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mwm-AT-YQL" userLabel="Duration">
+                                                    <rect key="frame" x="265" y="16" width="19" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="opened. expires in 59 seconds" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIs-ME-bzP" userLabel="Status">
+                                                    <rect key="frame" x="89" y="369" width="195" height="15"/>
+                                                    <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="15"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="zcO-mD-okX" customClass="UserAvatarView" customModule="Taylr" customModuleProvider="target">
                                                     <rect key="frame" x="8" y="342" width="50" height="50"/>
                                                     <constraints>
@@ -356,17 +373,23 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="4eK-Pd-MEp" firstAttribute="leading" secondItem="sAP-hW-A20" secondAttribute="leading" id="3Qm-x3-QOT"/>
+                                            <constraint firstAttribute="trailing" secondItem="UIs-ME-bzP" secondAttribute="trailing" constant="16" id="Ghi-Ee-yNY"/>
                                             <constraint firstItem="4eK-Pd-MEp" firstAttribute="bottom" secondItem="zcO-mD-okX" secondAttribute="bottom" constant="8" id="LgO-v7-B19"/>
                                             <constraint firstItem="4eK-Pd-MEp" firstAttribute="top" secondItem="sAP-hW-A20" secondAttribute="top" id="X6k-3L-aiO"/>
                                             <constraint firstAttribute="trailing" secondItem="4eK-Pd-MEp" secondAttribute="trailing" id="YQe-Nu-wUJ"/>
                                             <constraint firstItem="De8-FM-a37" firstAttribute="leading" secondItem="zcO-mD-okX" secondAttribute="trailing" constant="6" id="afm-Mn-4TV"/>
+                                            <constraint firstItem="mwm-AT-YQL" firstAttribute="top" secondItem="sAP-hW-A20" secondAttribute="top" constant="16" id="chm-UZ-tJf"/>
                                             <constraint firstAttribute="bottom" secondItem="4eK-Pd-MEp" secondAttribute="bottom" id="f9d-mj-uvG"/>
                                             <constraint firstItem="De8-FM-a37" firstAttribute="centerY" secondItem="zcO-mD-okX" secondAttribute="centerY" id="gwe-ln-YC5"/>
+                                            <constraint firstAttribute="bottom" secondItem="UIs-ME-bzP" secondAttribute="bottom" constant="16" id="kGI-pH-XYT"/>
                                             <constraint firstItem="4eK-Pd-MEp" firstAttribute="leading" secondItem="zcO-mD-okX" secondAttribute="leading" constant="-8" id="lpc-tA-g2m"/>
+                                            <constraint firstAttribute="trailing" secondItem="mwm-AT-YQL" secondAttribute="trailing" constant="16" id="sgh-Mz-Ble"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="avatarView" destination="zcO-mD-okX" id="R20-uq-1On"/>
+                                            <outlet property="durationLabel" destination="mwm-AT-YQL" id="Ezv-V1-X0C"/>
                                             <outlet property="playerView" destination="4eK-Pd-MEp" id="5zO-vj-HBw"/>
+                                            <outlet property="statusLabel" destination="UIs-ME-bzP" id="6Yz-e9-kqj"/>
                                             <outlet property="timeLabel" destination="De8-FM-a37" id="m9i-vW-kg2"/>
                                         </connections>
                                     </collectionViewCell>
